Added Retirement Image
Added Retirement Image

--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -1331,23 +1331,23 @@
 	<div class="row2200">
 		<h2 class="subtitlesFull">Retirement</h2>
 		<div class="retirementWidget">
-			<div class="retirementReserve">
-				<div class="">Reserve:</div>
-				<div class="retirementResourceBox"><input type="number" name="attr_RetirementReserve" min="0" /></div>
+			<div class="retirementReserve retirementResources">
+				<div class="retirementResourceTitle">Reserve:</div>
+				<div class="retirementResourceBox"><input type="number" name="attr_RetirementReserve" min="0" class="retirementBox"  /></div>
 			</div>
-			<div class="retirementDebt">
-				<div class="">Debt:</div>
-				<div class="retirementResourceBox"><input type="number" name="attr_DebtShare" min="0"/></div>
+			<div class="retirementDebt retirementResources">
+				<div class="retirementResourceTitle">Debt:</div>
+				<div class="retirementResourceBox"><input type="number" name="attr_DebtShare" min="0" class="retirementBox" /></div>
 			</div>
-			<div class="retirementShares">
-				<div class="">Shares:</div>
-				<div class="retirementResourceBox"><input type="number" name="attr_Reputation" min="0" /></div>
+			<div class="retirementShares retirementResources">
+				<div class="retirementResourceTitle">Shares:</div>
+				<div class="retirementResourceBox"><input type="number" name="attr_Reputation" min="0" class="retirementBox"  /></div>
 			</div>
 			<div class="retirementPlan">
-				<div class="">Retirement Plan</div>
-				<div class=""><textarea name="attr_retirementPlan" class="data"></textarea></div>
-				<div class="">Faction:</div>
-				<div class="retirementResourceBox"><input type="text" name="attr_RetirementFaction" /></div>
+				<div class="upkeepPathogenTitle">Retirement Plan</div>
+				<div class="retirementPlanSummary"><textarea name="attr_retirementPlan" class="full letter"></textarea></div>
+				<div class="retirementFactionTitle">Faction:</div>
+				<div class="retirementFactionName"><input type="text" name="attr_RetirementFaction" /></div>
 
 			</div>
 		</div>
