Updated Json and added Overcharge image
Updated Json and added Overcharge image

--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -1396,8 +1396,8 @@
 				</div>
 				<div class="systemChargeTitle">Charge:</div>
 				<div class="systemChargeBox"><input type="number" name="attr_ReactorCharge" min="0" max="8" class="currentCharge" /></div>
-				<div class="systemOverchargeTitle">Overcharge: </div>
-				<div class="systemOverchargeSymbol"><input type="checkbox" class="Overcharge" name="attr_ReactorOvercharge" /><span></span></div>
+				<div class="systemOverchargeTitle">Overcharge:</div>
+				<div class="systemOverchargeSymbol"><input type="checkbox" class="hideCheckbox largeCheckbox" name="attr_ReactorOvercharge" /><span class="largePips overcharge"></span></div>
 			</div>
 			<!--Sensors-->
 			<div class="shipSystem system">
