--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -613,7 +613,7 @@
 					<div class="systemChargeTitle">Charge: </div>
 					<div class="systemChargeBox"><input type="number" name="attr_ReactorCharge" min="0" max="8" class="currentCharge" /></div>
 					<div class="systemOverchargeTitle">Overcharge:</div>
-					<div class="systemOverchargeSymbol"><input type="checkbox" class="Overcharge" name="attr_ReactorOvercharge" /><span></span></div>
+					<div class="systemOverchargeSymbol"><input type="checkbox" class="hideCheckbox inlineCheckboxLarge" name="attr_ReactorOvercharge" /><span class="inlineOvercharge overcharge"></span></div>
 				</div>
 				<!--Scanner-->
 				<div class="shipSystem system">
@@ -1397,7 +1397,7 @@
 				<div class="systemChargeTitle">Charge:</div>
 				<div class="systemChargeBox"><input type="number" name="attr_ReactorCharge" min="0" max="8" class="currentCharge" /></div>
 				<div class="systemOverchargeTitle">Overcharge:</div>
-				<div class="systemOverchargeSymbol"><input type="checkbox" class="hideCheckbox largeCheckbox" name="attr_ReactorOvercharge" /><span class="largePips overcharge"></span></div>
+				<div class="systemOverchargeSymbol"><input type="checkbox" class="hideCheckbox inlineCheckboxLarge" name="attr_ReactorOvercharge" /><span class="inlineOvercharge overcharge"></span></div>
 			</div>
 			<!--Sensors-->
 			<div class="shipSystem system">
@@ -1766,7 +1766,7 @@
 		</div>
 		<div class="launchBayChargeTitle">Charge:</div>
 		<div class="launchBayChargeBox"><input type="number" name="attr_tugReactorCharge" min="0" max="3" class="tugReactorCharge" /></div>
-		<div class="launchBayOverchargeSymbol"><input type="checkbox" class="Overcharge" name="attr_tugReactorOvercharge" /><span></span></div>
+		<div class="launchBayOverchargeSymbol"><input type="checkbox" class="hideCheckbox inlineCheckboxMedium" name="attr_tugReactorOvercharge" /><span class="inlineArmour overcharge"></span></div>
 
 		<!--Condition Slots-->
 		<div class="launchBayTugConditionTitle">Conditions</div>
