--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -1873,7 +1873,8 @@
 				<div class="ship-sidebar1 flex-col">
 					<div><input min="0" name="attr_bowUpkeep" type="number" value="" class="txtfield"></div>
 				</div>
-
+				<div class="shipUpkeepTitle">Upkeep</div>
+				<div class="shipPatchTitle">Patches</div>
 				<div class="space-sidebar"></div>
 
 				<div class="ship-sidebar2 flex-col">
@@ -2314,7 +2315,8 @@
 				<div class="ship-sidebar1 flex-col">
 					<div><input min="0" name="attr_starboardUpkeep" type="number" value="" class="txtfield"></div>
 				</div>
-
+				<div class="shipUpkeepTitle">Upkeep</div>
+				<div class="shipPatchTitle">Patches</div>
 				<div class="space-sidebar"></div>
 
 				<div class="ship-sidebar2 flex-col">
@@ -2756,7 +2758,8 @@
 				<div class="ship-sidebar1 flex-col">
 					<div><input min="0" name="attr_portUpkeep" type="number" value="" class="txtfield"></div>
 				</div>
-
+				<div class="shipUpkeepTitle">Upkeep</div>
+				<div class="shipPatchTitle">Patches</div>
 				<div class="space-sidebar"></div>
 
 				<div class="ship-sidebar2 flex-col">
@@ -3198,7 +3201,8 @@
 				<div class="ship-sidebar1 flex-col">
 					<div><input min="0" name="attr_sternUpkeep" type="number" value="" class="txtfield"></div>
 				</div>
-
+				<div class="shipUpkeepTitle">Upkeep</div>
+				<div class="shipPatchTitle">Patches</div>
 				<div class="space-sidebar"></div>
 
 				<div class="ship-sidebar2 flex-col">
