fix for shield shove/parry including base dice to gear

--- a/Forbidden_Lands/Forbidden_Lands.html
+++ b/Forbidden_Lands/Forbidden_Lands.html
@@ -3938,7 +3938,7 @@ Object.keys(monster_attributes).forEach(skill_name => {
                     shield1_artifact_die_twelve = int(values.shield1_artifact_die_twelve);
                 setAttrs({
                     attribute: strength,
-                    gear: shield1MiscGear,
+                    gear: shield1MiscGear - strength,
                     skill: shield1MiscSkill,
                     artifact_die_ocho: shield1_artifact_die_ocho,
                     artifact_die_eight: shield1_artifact_die_eight,
@@ -3970,7 +3970,7 @@ Object.keys(monster_attributes).forEach(skill_name => {
                     shield1_artifact_die_twelve = int(values.shield1_artifact_die_twelve);
                 setAttrs({
                     attribute: strength,
-                    gear: shield1MiscGear,
+                    gear: shield1MiscGear - strength,
                     skill: shield1MiscSkill,
                     artifact_die_ocho: shield1_artifact_die_ocho,
                     artifact_die_eight: shield1_artifact_die_eight,
