--- a/Forbidden_Lands/Forbidden_Lands.html
+++ b/Forbidden_Lands/Forbidden_Lands.html
@@ -20,6 +20,7 @@
         <span class="footer">3/5/20</span>
         <ol style="margin: 0 2em 0 2em; padding: 0 1em 0 3em;">
             <span>v1.64</span>
+            <li>Bug fix: shield shove/parry rolls were erroneously including strength as gear dice.</li>
             <li>Optimised the css that reduces the opacity of damage skulls above the attribute's max value. Purely cosmetic.</li>
         </ol>
         <br>
