--- a/Palladium Fantasy 1E/palladium_fantasy_1e.html
+++ b/Palladium Fantasy 1E/palladium_fantasy_1e.html
@@ -545,7 +545,7 @@
                     <input class='combat-field' type="text" class='combat-text' name="attr_combatskill_type" placeholder="Combat Type" />
                     <div class='space-holder'></div>
                     <div class='space-holder'></div>
-                    <textarea wrap="soft" class="combat-textarea" value="" placeholder="Style Details like kick attack, disarms, racial bite or claw attacks, etc." /></textarea>
+                    <textarea wrap="soft" class="combat-textarea" value="" name="attr_combatskill_notes" placeholder="Style Details like kick attack, disarms, racial bite or claw attacks, etc." /></textarea>
                 </div>
                 <div class='bonus-grid-container' >
                     <h5>Combat Skill Level</h5>
