update shield shove/parry gear dice calc

--- a/Forbidden_Lands/Forbidden_Lands.html
+++ b/Forbidden_Lands/Forbidden_Lands.html
@@ -3932,14 +3932,14 @@ Object.keys(monster_attributes).forEach(skill_name => {
                     shield1_bonus_total = int(values.shield1_bonus_total),
                     shield1_name = values.shield1_name,
                     shield1MiscSkill = Math.max((skill + shield1_bonus_misc),-3),
-                    shield1MiscGear = shield1_bonus_total - skill - shield1_bonus_misc,
+                    shield1MiscGear = shield1_bonus_total - skill - shield1_bonus_misc - strength,
                     shield1_artifact_die_ocho = int(values.shield1_artifact_die_ocho),
                     shield1_artifact_die_eight = int(values.shield1_artifact_die_eight),
                     shield1_artifact_die_ten = int(values.shield1_artifact_die_ten),
                     shield1_artifact_die_twelve = int(values.shield1_artifact_die_twelve);
                 setAttrs({
                     attribute: strength,
-                    gear: shield1MiscGear - strength,
+                    gear: shield1MiscGear,
                     skill: shield1MiscSkill,
                     artifact_die_ocho: shield1_artifact_die_ocho,
                     artifact_die_eight: shield1_artifact_die_eight,
@@ -3964,14 +3964,14 @@ Object.keys(monster_attributes).forEach(skill_name => {
                     shield1_bonus_total = int(values.shield1_bonus_total),
                     shield1_name = values.shield1_name,
                     shield1MiscSkill = Math.max((skill + shield1_bonus_misc),-3),
-                    shield1MiscGear = shield1_bonus_total - skill - shield1_bonus_misc,
+                    shield1MiscGear = shield1_bonus_total - skill - shield1_bonus_misc - strength,
                     shield1_artifact_die_ocho = int(values.shield1_artifact_die_ocho),
                     shield1_artifact_die_eight = int(values.shield1_artifact_die_eight),
                     shield1_artifact_die_ten = int(values.shield1_artifact_die_ten),
                     shield1_artifact_die_twelve = int(values.shield1_artifact_die_twelve);
                 setAttrs({
                     attribute: strength,
-                    gear: shield1MiscGear - strength,
+                    gear: shield1MiscGear,
                     skill: shield1MiscSkill,
                     artifact_die_ocho: shield1_artifact_die_ocho,
                     artifact_die_eight: shield1_artifact_die_eight,
