Replaced Ship patches with images
Updated version number to 1.5

--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -13,7 +13,7 @@
 		</h4>
 
 	</div>
-	<span class="version">Version v1.20</span>
+	<span class="version">Version v1.50</span>
 </div>
 
 <input type="radio" name="attr_selectedSheet" class="hidden crewmemberSelector" value="1" checked="checked">
@@ -1145,7 +1145,6 @@
 				</div>
 			</div>
 		</div>
-
 		<!--Description-->
 		<div class="descriptionWidget">
 			<div class="descriptionTitle">Description</div>
@@ -1823,10 +1822,10 @@
 				<div class="launchBayTrailerConditionTitle">Conditions</div>
 				<div class="launch-bay-trailer-conditions">
 					<input class="resiliance-slot hideCheckbox largeCheckbox" type="checkbox" name="attr_trailerResilienceSlotCondition" value="1" />
-					<span class="resiliance resiliance-slot-2 largePips "></span>
-					<input class='integrity hideCheckbox largeCheckbox' type="checkbox" name="attr_trailerIntegrityCondition" value="1" /><span class="integrity largePips">
-					</span>
-					<input class='vital hideCheckbox largeCheckbox' type="checkbox" name="attr_trailerVitalityCondition" value="1" />
+					<span class="resiliance resiliance-slot largePips"></span>
+					<input class="integrity hideCheckbox largeCheckbox" type="checkbox" name="attr_trailerIntegrityCondition" value="1" />
+					<span class="integrity largePips"></span>
+					<input class="vital hideCheckbox largeCheckbox" type="checkbox" name="attr_trailerVitalityCondition" value="1" />
 					<span class="vital largePips"></span>
 				</div>
 			</div>
@@ -1859,11 +1858,15 @@
 				<div class="shipPatchTitle">Patches</div>
 				<div class="space-sidebar"></div>
 
-				<div class="ship-sidebar2 flex-col">
-					<div class="flex-center patches"><input name="attr_bowPatch1" type="checkbox" value="1"><span></span></div>
-					<div class="flex-center patches"><input name="attr_bowPatch2" type="checkbox" value="1"><span></span></div>
-					<div class="flex-center patches"><input name="attr_bowPatch3" type="checkbox" value="1"><span></span></div>
+				<div class="ship-sidebar2">
+					<input type="checkbox" class="patch1 hideCheckbox largeCheckbox" name="attr_bowPatch1" value="1"/>
+					<span class="patch patch1 largePips"></span>
+					<input name="attr_bowPatch2" type="checkbox"  class="patch2 hideCheckbox largeCheckbox" value="1"/>
+					<span class="patch patch2 largePips"></span>
+					<input name="attr_bowPatch3" type="checkbox" value="1" class="patch3 hideCheckbox largeCheckbox"/>
+					<span class="patch patch3 largePips"></span>
 				</div>
+
 				<div></div><!-- empty placeholder -->
 				<!-- row 00 -->
 				<div class="ship-oct ship-default"><input name="attr_bow-resilience1" type="checkbox" value="1" checked="checked"><span></span><span class="insec default">InSec</span></div>
@@ -2301,11 +2304,12 @@
 				<div class="shipPatchTitle">Patches</div>
 				<div class="space-sidebar"></div>
 
-				<div class="ship-sidebar2 flex-col">
-					<div class="flex-center patches"><input name="attr_starboardPatch1" type="checkbox" value="1"><span></span></div>
-					<div class="flex-center patches"><input name="attr_starboardPatch2" type="checkbox" value="1"><span></span></div>
-					<div class="flex-center patches"><input name="attr_starboardPatch3" type="checkbox" value="1"><span></span></div>
+				<div class="ship-sidebar2">
+					<input name="attr_starboardPatch1" type="checkbox" value="1" class="patch1 hideCheckbox largeCheckbox"><span class="patch patch1 largePips"></span>
+					<input name="attr_starboardPatch2" type="checkbox" value="1" class="patch2 hideCheckbox largeCheckbox"><span class="patch patch2 largePips"></span>
+					<input name="attr_starboardPatch3" type="checkbox" value="1" class="patch3 hideCheckbox largeCheckbox"><span class="patch patch3 largePips"></span>
 				</div>
+
 				<div></div><!-- empty placeholder -->
 				<!-- row 00 -->
 				<div class="ship-oct ship-default"><input name="attr_starboard-resilience1" type="checkbox" value="1" checked="checked"><span></span><span class="insec default">InSec</span></div>
@@ -2744,11 +2748,12 @@
 				<div class="shipPatchTitle">Patches</div>
 				<div class="space-sidebar"></div>
 
-				<div class="ship-sidebar2 flex-col">
-					<div class="flex-center patches"><input name="attr_portPatch1" type="checkbox" value="1"><span></span></div>
-					<div class="flex-center patches"><input name="attr_portPatch2" type="checkbox" value="1"><span></span></div>
-					<div class="flex-center patches"><input name="attr_portPatch3" type="checkbox" value="1"><span></span></div>
+				<div class="ship-sidebar2">
+					<input name="attr_portPatch1" type="checkbox" value="1" class="patch1 hideCheckbox largeCheckbox"><span class="patch patch1 largePips"></span>
+					<input name="attr_portPatch2" type="checkbox" value="1" class="patch2 hideCheckbox largeCheckbox"><span class="patch patch2 largePips"></span>
+					<input name="attr_portPatch3" type="checkbox" value="1" class="patch3 hideCheckbox largeCheckbox"><span class="patch patch3 largePips"></span>
 				</div>
+
 				<div></div><!-- empty placeholder -->
 				<!-- row 00 -->
 				<div class="ship-oct ship-default"><input name="attr_port-resilience1" type="checkbox" value="1" checked="checked"><span></span><span class="insec default">InSec</span></div>
@@ -3187,11 +3192,12 @@
 				<div class="shipPatchTitle">Patches</div>
 				<div class="space-sidebar"></div>
 
-				<div class="ship-sidebar2 flex-col">
-					<div class="flex-center patches"><input name="attr_sternPatch1" type="checkbox" value="1"><span></span></div>
-					<div class="flex-center patches"><input name="attr_sternPatch2" type="checkbox" value="1"><span></span></div>
-					<div class="flex-center patches"><input name="attr_sternPatch3" type="checkbox" value="1"><span></span></div>
+				<div class="ship-sidebar2">
+					<input name="attr_sternPatch1" type="checkbox" value="1" class="patch1 hideCheckbox largeCheckbox"><span class="patch patch1 largePips"></span>
+					<input name="attr_sternPatch2" type="checkbox" value="1" class="patch2 hideCheckbox largeCheckbox"><span class="patch patch2 largePips"></span>
+					<input name="attr_sternPatch3" type="checkbox" value="1" class="patch3 hideCheckbox largeCheckbox"><span class="patch patch3 largePips"></span>
 				</div>
+
 				<div></div><!-- empty placeholder -->
 				<!-- row 00 -->
 				<div class="ship-oct ship-default"><input name="attr_stern-resilience1" type="checkbox" value="1" checked="checked"><span></span><span class="insec default">InSec</span></div>
@@ -3622,7 +3628,7 @@
 
 		</div>
 
-		<!--       CARGO         -->
+		<!--Page 2-->
 		<div class="shipPG2">
 			<div class="resourceWidget">
 				<!--Resources-->
