[Ironsworn] Support for Custom Oracles (#5919)
* Bump to master (#2)

* Update README.md

* fix Chaotic Neutral alignment value (#5795)

* CWOD [V20] Updates / CWOD [DAV20] Redesign (#5796)

This update covers a number of requested features from users as well as bug fixes. A post to the changes can be found on the forums letting users know.

Updates:
- We shrunk the dot size of everything to better fit them on the sheets and make it look much cleaner.
- Rmoved the excess Other category and Merits and Flaws at the bottom left of the Primary tab and replaced this with a section for the Sins for the character's Path/Road. These sections already have their own spots so there was no sense in having a second spot for them.
- A box now surrounds the Virtues that can be clicked on so new players and sheet users know now that it can be changed instead of stumbling upon this features
- We added a number of Extra Bruised Health Levels. From 3 to 12 in fact. This is obviously for creatures the ST may need to throw at bad players ;) but it can also be useful for house rules or homebrew.
- The Other Traits tab has been expaneded. Now it includes Secondary Abilities that many STs are still very fond of using (and appear in Mage20), this is of course in addition to the 15 Other Traits for those who need it all.
- Slightly tweaked Experience Tab now instead of a checkbox to show its been complete we've changed this to points spent, and the date they were spent on. This we find has been requested as its more clear when things were obtained. This allows an ST to track purchases precisely and prevents problem players from being dishonest if filled out poperly.
- Combat Tab has been given an expansion with the addition of Vehicles and Havens! We may eventually change the Combat tab to the Equipment tab as it is more appropriate but it isn't a very pressing issue at the momement. We're also taking feedback on this new section. 50+ users of the beta roll out of this featu

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -14687,6 +14687,10 @@
         <tr>
             <td colspan="2" class="sheet-subheader">{{header}}</td>
         </tr>
+        {{#custom-oracle}}
+            <td class="sheet-oracle-dice"><span>{{custom-oracle}}</span></td>
+            <td class="sheet-oracle-table-text">{{value}}</td>
+        {{/custom-oracle}}
         {{#action}}
         <tr>
             <td class="sheet-oracle-dice"><span>{{action}}</span></td>
