--- a/Forbidden_Lands/Forbidden_Lands.html
+++ b/Forbidden_Lands/Forbidden_Lands.html
@@ -1,4 +1,4 @@
-<!--3/1/20 set sheet version manually with currentVersion in sheetworkers-->
+<!--3/8/20 set sheet version manually with currentVersion in sheetworkers-->
 <input type="hidden" name="attr_version" value="0" />
 <!-- ADDED recalc checkbox to force sheet worker events. temp unhide for testing purposes-->
 <input class="hidden" name="attr_recalc1" type="checkbox" />
@@ -17,20 +17,24 @@
     <span class="announcements-show toggle-dice-only toggle-monster-only" name="attr_version">&nbsp;</span>
     <div class="announcements toggle-dice-only toggle-monster-only">
         <h3 data-i18n="latest-announcements">Latest Announcements</h3>
-        <span class="footer">3/1/20</span>
+        <span class="footer">3/8/20</span>
         <ol style="margin: 0 2em 0 2em; padding: 0 1em 0 3em;">
-            <span>v1.63</span>
-            <li>Added a toggleable 2nd row to each skill.</li>
-            <li>Added Artifact dice, Misc Skill modifier, and Notes to each skill.</li>
-            <li>Updated the roll template for skill rolls.</li>
-            <li>Added Misc Skill modifier to strength-based monster skills.</li>
-            <li>Visual enhancement; reduced the opacity of damage skulls that are beyond the character's max value.</li>
+            <span>v1.64</span>
+            <li>Bug fix: shield shove/parry rolls were erroneously including strength as gear dice.</li>
+            <li>Optimized the css that reduces the opacity of damage skulls above the attribute's max value. Purely cosmetic.</li>
         </ol>
         <br>
         <input type="checkbox" class="announcements-older-show" name="attr_show_announcements_old" value="1" data-i18n-title="old-announcements" />
         <span data-i18n-title="old-announcements">&nbsp;</span>
         <span class="announcements-older-show">
             <ol>
+                <span>v1.63</span>
+                <li>Added a toggleable 2nd row to each skill.</li>
+                <li>Added Artifact dice, Misc Skill modifier, and Notes to each skill.</li>
+                <li>Updated the roll template for skill rolls.</li>
+                <li>Added Misc Skill modifier to strength-based monster skills.</li>
+                <li>Visual enhancement; reduced the opacity of damage skulls that are beyond the character's max value.</li>
+
                 <span>v1.62</span>
                 <li>Added the 'IM Fell English' webfont to better match Forbidden Lands style.</li>
                 <li>Updated all image links to point to the images located on roll20's github repo.</li>
@@ -3049,7 +3053,7 @@
     /* version tracking */
     var Sheet = Sheet || (function () {
     
-        let currentVersion = 1.63,
+        let currentVersion = 1.64,
     
             newAnnouncement = function (v) {
                 getAttrs(["version", "show_announcements"], function (values) {
@@ -3928,7 +3932,7 @@ Object.keys(monster_attributes).forEach(skill_name => {
                     shield1_bonus_total = int(values.shield1_bonus_total),
                     shield1_name = values.shield1_name,
                     shield1MiscSkill = Math.max((skill + shield1_bonus_misc),-3),
-                    shield1MiscGear = shield1_bonus_total - skill - shield1_bonus_misc,
+                    shield1MiscGear = shield1_bonus_total - skill - shield1_bonus_misc - strength,
                     shield1_artifact_die_ocho = int(values.shield1_artifact_die_ocho),
                     shield1_artifact_die_eight = int(values.shield1_artifact_die_eight),
                     shield1_artifact_die_ten = int(values.shield1_artifact_die_ten),
@@ -3960,7 +3964,7 @@ Object.keys(monster_attributes).forEach(skill_name => {
                     shield1_bonus_total = int(values.shield1_bonus_total),
                     shield1_name = values.shield1_name,
                     shield1MiscSkill = Math.max((skill + shield1_bonus_misc),-3),
-                    shield1MiscGear = shield1_bonus_total - skill - shield1_bonus_misc,
+                    shield1MiscGear = shield1_bonus_total - skill - shield1_bonus_misc - strength,
                     shield1_artifact_die_ocho = int(values.shield1_artifact_die_ocho),
                     shield1_artifact_die_eight = int(values.shield1_artifact_die_eight),
                     shield1_artifact_die_ten = int(values.shield1_artifact_die_ten),
