Added NPC Sheet
Updated version number to 1.6
Altered sheetSelector to have two groups... Player and Gamemaster.
Added the first NPC sheet: sophontSheet
Added all the stats for the Sophont Logs

--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -7,18 +7,23 @@
 		<h4>
 			Sheet Type:
 			<select name="attr_selectedSheet" class="typeSelector">
-				<option value="1" selected>Free Spacer Crewmember</option>
-				<option value="2">Contingency type Corvette</option>
+				<optgroup label="Player">
+					<option value="1" selected>Free Spacer Crewmember</option>
+					<option value="2">Contingency type Corvette</option>
+				</optgroup>
+				<optgroup label="Gamemaster">
+					<option value="3">Sophont</option>
+				</optgroup>
 			</select>
 		</h4>
 
 	</div>
-	<span class="version">Version v1.50</span>
+	<span class="version">Version v1.60</span>
 </div>
 
 <input type="radio" name="attr_selectedSheet" class="hidden crewmemberSelector" value="1" checked="checked">
 <input type="radio" name="attr_selectedSheet" class="hidden shipSelector" value="2">
-<input type="radio" name="attr_selectedSheet" class="hidden launchSelector" value="3">
+<input type="radio" name="attr_selectedSheet" class="hidden sophontSelector" value="3">
 <hr />
 
 <!-- ------------------- -->
@@ -31,7 +36,7 @@
 		<div class="crewTop">
 			<!--ID -->
 			<div class="crewID">
-				<h1 class="alias">Alias:</h1>
+				<div class="alias">Alias:</div>
 				<div class="aliasName"><input type="text" name="attr_name" class="full aspect" /></div>
 				<h1 class="player">Player:</h1>
 				<div class="playerName"><input type="text" name="attr_nameplayer" class="full aspect" /></div>
@@ -1859,11 +1864,11 @@
 				<div class="space-sidebar"></div>
 
 				<div class="ship-sidebar2">
-					<input type="checkbox" class="patch1 hideCheckbox largeCheckbox" name="attr_bowPatch1" value="1"/>
+					<input type="checkbox" class="patch1 hideCheckbox largeCheckbox" name="attr_bowPatch1" value="1" />
 					<span class="patch patch1 largePips"></span>
-					<input name="attr_bowPatch2" type="checkbox"  class="patch2 hideCheckbox largeCheckbox" value="1"/>
+					<input name="attr_bowPatch2" type="checkbox" class="patch2 hideCheckbox largeCheckbox" value="1" />
 					<span class="patch patch2 largePips"></span>
-					<input name="attr_bowPatch3" type="checkbox" value="1" class="patch3 hideCheckbox largeCheckbox"/>
+					<input name="attr_bowPatch3" type="checkbox" value="1" class="patch3 hideCheckbox largeCheckbox" />
 					<span class="patch patch3 largePips"></span>
 				</div>
 
@@ -3627,7 +3632,6 @@
 			</div>
 
 		</div>
-
 		<!--Page 2-->
 		<div class="shipPG2">
 			<div class="resourceWidget">
@@ -3682,6 +3686,223 @@
 	</div>
 </div>
 
+<!-- ------------------- -->
+<!--    Sophont Log      -->
+<!-- ------------------- -->
+
+<div class="sheetType sophontSheet">
+	<div class="sophontSheetGrid">
+		<div class="alias">Alias:</div>
+		<div class="aliasName"><input type="text" name="attr_name" class="full aspect" /></div>
+		<div class="">Pronouns:</div>
+		<div class=""><input type="text" name="attr_GenderIndentity" class="full aspect" /></div>
+		<div class="">Concept:</div>
+		<div class=""><input type="text" name="attr_concept" class="full aspect" /></div>
+		<div class="">Description:</div>
+		<div class=""><input type="text" name="attr_description" class="full aspect" /></div>
+		<div class="">Behaviour:</div>
+		<div class=""><input type="text" name="attr_behaviour" class="full aspect" /></div>
+		<div class="">Agenda:</div>
+		<div class=""><input type="text" name="attr_agenda" class="full aspect" /></div>
+		<div class="">Faction:</div>
+		<div class=""><input type="text" name="attr_faction" class="full aspect" /></div>
+		<div class="">Languages:</div>
+		<div class=""><input type="text" name="attr_langages" class="full aspect" /></div>
+		<div class="">Significance:</div>
+		<div class="">
+			<select name="attr_significance" class="full aspect">
+				<option></option>
+				<option>Untrained</option>
+				<option>Regular</option>
+				<option>Veteran</option>
+				<option>Boss</option>
+			</select>
+		</div>
+		<div class="">Diffiuclty:</div>
+		<div class="">
+			<select name="attr_difficulty" class="full aspect">
+				<option></option>
+				<option>Ordinary(2)</option>
+				<option>Regular(3)</option>
+				<option>Hard(4)</option>
+				<option>Ambitious(5)</option>
+			</select>
+		</div>
+		<div class="">Tech Level:</div>
+		<div class="">
+			<select name="attr_techLevel" class="full aspect">
+				<option></option>
+				<option>Primitive</option>
+				<option>Machine</option>
+				<option>Information</option>
+				<option>Biotech</option>
+				<option>Rim</option>
+				<option>Core</option>
+			</select>
+		</div>
+		<div class="">Damage:</div>
+		<div class="">
+			<select name="attr_damage" class="full aspect">
+				<option></option>
+				<option>Unarmed[0]</option>
+				<option>Archaic[1]</option>
+				<option>Common[2]</option>
+			</select>
+		</div>
+		<div class="">Gear:</div>
+		<div class="">
+			<select name="attr_gear" class="full aspect">
+				<option></option>
+				<option>Resident[0]</option>
+				<option>Secure[1]</option>
+				<option>Combat[2]</option>
+				<option>Heavy[3]</option>
+				<option>Exosuit[4]</option>
+				<option>Space marine[5]</option>
+			</select>
+		</div>
+		<div class="">Species:</div>
+		<div class=""><input type="text" name="attr_species" class="full aspect" /></div>
+		<div class="">Class:</div>
+		<div class=""><input type="text" name="attr_class" class="full aspect" /></div>
+		<div class="">Augments:</div>
+		<div class=""><textarea name="attr_augments" class="full letter"></textarea></div>
+		<div class="">Archetype:</div>
+		<div class=""><input type="text" name="attr_archetype" class="full aspect" /></div>
+		<div class="">Tags:</div>
+		<div class=""><textarea name="attr_tags" class="full letter"></textarea></div>
+		<div class="">Notes:</div>
+		<div class=""><input type="text" name="attr_notes" class="full aspect" /></div>
+		<!--Condition Slots-->
+		<div class="">
+			<div class="conditionsTitle">Conditions Slots</div>
+			<div class="conditionCheckbox conditionLineAugment"><input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_resilienceAugmentationSlot" value="1" /><span class="inlinePips hexSelector"></span></div>
+			<div class="conditionType conditionLineAugment">Resilience[5](Augment)</div>
+			<div class="conditionCheckbox conditionLineResilience"><input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_resilienceSlot" value="1" checked="checked" disabled="disabled" /><span class="inlinePips hexSelector"></span></div>
+			<div class="conditionType conditionLineResilience">Resilience[5]</div>
+			<div class="conditionCheckbox conditionLineIntegrity"><input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_integritySlot" value="1" checked="checked" disabled="disabled" /><span class="inlinePips hexSelector"></span></div>
+			<div class="conditionType conditionLineIntegrity">Integrity[5]</div>
+			<div class="conditionCheckbox conditionLineVitality"><input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_vitalitySlot" value="1" checked="checked" disabled="disabled" /><span class="inlinePips hexSelector"></span></div>
+			<div class="conditionType conditionLineVitality">Vitality[5]</div>
+
+			<div class="shipSuit EVACheckbox">
+				<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_armourSlot1" value="1" checked="checked" disabled="disabled" />
+				<span class="inlinePips hexSelector"></span>
+			</div>
+			<div class="shipSuit EVAarmourType">
+				<select name="attr_ShipSuitSlot" class="most">
+					<option></option>
+					<option>pathogen[3]</option>
+					<option>plasma[3]</option>
+					<option>radiation[3]</option>
+					<option>pressure[3]</option>
+					<option>caustics[3]</option>
+					<option>combat[3]</option>
+				</select>
+			</div>
+
+			<div class="shipSuit EVACheckbox">
+				<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_armourSlot2" value="1" checked="checked" disabled="disabled" />
+				<span class="inlinePips hexSelector"></span>
+			</div>
+			<div class="shipSuit EVAarmourType">
+				<select name="attr_ShipSuitSlot" class="most">
+					<option></option>
+					<option>pathogen[3]</option>
+					<option>plasma[3]</option>
+					<option>radiation[3]</option>
+					<option>pressure[3]</option>
+					<option>caustics[3]</option>
+					<option>combat[3]</option>
+				</select>
+			</div>
+
+			<div class="shipSuit EVACheckbox">
+				<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_armourSlot3" value="1" checked="checked" disabled="disabled" />
+				<span class="inlinePips hexSelector"></span>
+			</div>
+			<div class="shipSuit EVAarmourType">
+				<select name="attr_ShipSuitSlot" class="most">
+					<option></option>
+					<option>pathogen[3]</option>
+					<option>plasma[3]</option>
+					<option>radiation[3]</option>
+					<option>pressure[3]</option>
+					<option>caustics[3]</option>
+					<option>combat[3]</option>
+				</select>
+			</div>
+
+			<div class="shipSuit EVACheckbox">
+				<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_armourSlot4" value="1" checked="checked" disabled="disabled" />
+				<span class="inlinePips hexSelector"></span>
+			</div>
+			<div class="shipSuit EVAarmourType">
+				<select name="attr_ShipSuitSlot" class="most">
+					<option></option>
+					<option>pathogen[3]</option>
+					<option>plasma[3]</option>
+					<option>radiation[3]</option>
+					<option>pressure[3]</option>
+					<option>caustics[3]</option>
+					<option>combat[3]</option>
+				</select>
+			</div>
+
+			<div class="shipSuit EVACheckbox">
+				<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_armourSlot5" value="1" checked="checked" disabled="disabled" />
+				<span class="inlinePips hexSelector"></span>
+			</div>
+			<div class="shipSuit EVAarmourType">
+				<select name="attr_ShipSuitSlot" class="most">
+					<option></option>
+					<option>pathogen[3]</option>
+					<option>plasma[3]</option>
+					<option>radiation[3]</option>
+					<option>pressure[3]</option>
+					<option>caustics[3]</option>
+					<option>combat[3]</option>
+				</select>
+			</div>
+
+			<div class="crewConditions">
+				<div class="shipSuit EVAArmour">
+					<input type="checkbox" class="hideCheckbox inlineCheckboxMedium" name="attr_armourCondition1" value="1" />
+					<span class="inlineArmour armour"></span>
+				</div>
+
+				<div class="shipSuit EVAArmour">
+					<input type="checkbox" class="hideCheckbox inlineCheckboxMedium" name="attr_armourCondition2" value="1" />
+					<span class="inlineArmour armour"></span>
+				</div>
+
+				<div class="shipSuit EVAArmour">
+					<input type="checkbox" class="hideCheckbox inlineCheckboxMedium" name="attr_armourCondition3" value="1" />
+					<span class="inlineArmour armour"></span>
+				</div>
+
+				<div class="shipSuit EVAArmour">
+					<input type="checkbox" class="hideCheckbox inlineCheckboxMedium" name="attr_armourCondition4" value="1" />
+					<span class="inlineArmour armour"></span>
+				</div>
+
+				<div class="shipSuit EVAArmour">
+					<input type="checkbox" class="hideCheckbox inlineCheckboxMedium" name="attr_armourCondition5" value="1" />
+					<span class="inlineArmour armour"></span>
+				</div>
+
+				<input type="checkbox" class="resiliance-slot-2 hideCheckbox largeCheckbox" name="attr_resilienceAugmentationCondition" value="1" />
+				<span class="resiliance resiliance-slot-2 largePips"></span>
+				<input type="checkbox" class="resiliance-slot-1 hideCheckbox largeCheckbox" name="attr_resilienceCondition" value="1" />
+				<span class="resiliance resiliance-slot-1 largePips"></span>
+				<input type="checkbox" class="integrity hideCheckbox largeCheckbox" name="attr_IntegrityCondition" value="1" />
+				<span class="crewIntegrity largePips"></span>
+				<input type="checkbox" class="vital hideCheckbox largeCheckbox" name="attr_vitalityCondition" value="1" />
+				<span class="vital largePips"></span>
+			</div>
+		</div>
+	</div>
+</div>
 
 <script type="text/worker">
 
